Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AKA_FKA_DBA__c</fullName>
        <label>Also Known As</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Currency__c</fullName>
        <label>Account Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_ID_SFDC_18digit_del__c</fullName>
        <label>Account ID SFDC 18digit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_NPS_Average_Score__c</fullName>
        <formula>&quot;1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account NPS Average Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_TestCode__c</fullName>
        <externalId>true</externalId>
        <label>Account TestCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aircraft &amp; Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baptist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catholic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer-Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversified Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Episcopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services/Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas &amp; Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing &amp; Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lutheran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper/Forest Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care/Cosmetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presbyterian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing &amp; Printing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alumni__c</fullName>
        <label>Alumni</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendance__c</fullName>
        <label>Attendance</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_County__c</fullName>
        <label>Billing County</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>GMBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMF__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMF__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carnegie_Class__c</fullName>
        <label>Carnegie Class</label>
        <picklist>
            <picklistValues>
                <fullName>-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carnegie_Description__c</fullName>
        <label>Carnegie Description</label>
        <picklist>
            <controllingField>Carnegie_Class__c</controllingField>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charity_Mission_Statement__c</fullName>
        <label>Charity Mission Statement</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charity_Status__c</fullName>
        <label>Charity Status</label>
        <picklist>
            <picklistValues>
                <fullName>501c3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501c4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contributions_Public_Support__c</fullName>
        <label>Contributions - Public Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contributions_Special_Events__c</fullName>
        <label>Contributions - Special Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Terms__c</fullName>
        <label>Credit Terms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Fnd./Contrib. Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA/VAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Accounting Software VAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT/System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Firms/Assoc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital/Medical Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Research/Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College/University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education--Fnd/Acad/Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior/Tech./Comm. College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminary/Theo. Seminary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archdiocese/Diocese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewish Federation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious Ministry/Missions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious--General Fnd./Assoc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment__c</fullName>
        <label>Enrollment</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Government_Grants__c</fullName>
        <label>Government Grants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Annual_Budget__c</fullName>
        <label>Gross Annual Budget</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>K_12_School_Level__c</fullName>
        <label>K-12 School Level</label>
        <picklist>
            <picklistValues>
                <fullName>Elementary School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle School,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSAA_Date__c</fullName>
        <label>MSAA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Package__c</fullName>
        <label>Maintenance Package</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NTEE_Category__c</fullName>
        <label>NTEE Category</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NTEE_Code__c</fullName>
        <label>NTEE Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Postal_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Postal Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payer__c</fullName>
        <label>Payer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productline__c</fullName>
        <label>Productline</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLX_Account_ID__c</fullName>
        <label>SLX Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_County__c</fullName>
        <label>Shipping County</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siteid__c</fullName>
        <label>Siteid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Area_of_Interest__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketing &amp; Data Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising &amp; CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Information Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tuition__c</fullName>
        <label>Tuition</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eBus_ID__c</fullName>
        <label>eBus ID</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Account</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Account</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Account</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>xvsd</fullName>
        <active>true</active>
        <label>xvsd</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>